# memorona

./: CMakeLists.txt  ClickableCard.h  Memorona_ca_ES.qm  Memorona_ca_ES.ts  README.md  TODO  difficultylevel.cpp  difficultylevel.h  i18n.qrc  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ranking.cpp  ranking.h  rankingdialog.cpp  rankingdialog.h  rankingdialog.ui  test_ranking.cpp
